--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "farmagain",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https:/geethalakshumi.github.io/farmagain",
+  "homepage": "https:/geethalakshumi.github.io/Farmagainpro",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
